# SearchGen

./: .gitignore  CONTENT_DESIGN.md  GIF_CAPTURE.md  README.md  WEBSITE_BUILD.md  WEBSITE_STRUCTURE_GUIDE.md  benchmark.css  benchmark.html  benchmark.js  demo.html  index.html
agent/: .env.example  .gitignore  MANIFEST.in  QUICKSTART.md  README.md  pyproject.toml
agent/examples/: custom_generator.py  custom_signers.py  fake_openai_server.py  prompts.jsonl
agent/src/searchgen_agent/: __init__.py  io.py  signing.py
agent/src/searchgen_agent/cli/: consume.py  generate.py  reason.py
agent/src/searchgen_agent/generator/: __init__.py  api.py  runner.py
agent/src/searchgen_agent/media/: __init__.py  vlm_payload.py
agent/src/searchgen_agent/providers/: __init__.py
agent/src/searchgen_agent/reasoner/: __init__.py  artifacts.py  conversation.py  finalize.py  frontier_model.py  row_state.py  (+4 more)
agent/tests/: test_end_to_end_offline.py  test_generator.py  test_io.py  test_search_client.py  test_signing.py
evaluation/: README.md  aggregate_scores.py  evaluate.py  pyproject.toml
evaluation/docs/: evaluation_protocol.md  input_output_schema.md  prompt_reference.md
evaluation/examples/: env.example  generated_images_manifest.example.jsonl
evaluation/searchgen_eval/: __init__.py  api_client.py  cli.py  dataset.py  discovery.py  evaluator.py  image_utils.py  judge_common.py  scoring.py
evaluation/tests/: test_dataset.py  test_discovery.py  test_end_to_end_mock.py  test_parser.py  test_prompt_parity.py
evaluation/tests/fixtures/: prompt_interleaved_golden.json.b64
(+5 files in other folders)
