[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "searchgen-agent"
version = "0.1.0"
description = "Stagewise search-augmented prompt reasoning and image-generation tooling"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31",
  "Pillow>=10.0",
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "ruff>=0.6",
]

[project.scripts]
searchgen-reason = "searchgen_agent.cli.reason:main"
searchgen-generate = "searchgen_agent.cli.generate:main"
searchgen-consume = "searchgen_agent.cli.consume:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 110
target-version = "py310"
