[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "searchgen-eval"
version = "1.0.0"
description = "Portable SearchGen FFJudge-PP evaluator"
requires-python = ">=3.10"
dependencies = ["Pillow>=10.0", "requests>=2.31"]

[tool.setuptools.packages.find]
include = ["searchgen_eval*"]
